--- a/BeingSeenApp/app/src/main/res/layout/activity_donation_status.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_donation_status.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AboutUsFrontend.DonationStatus">
+    tools:context=".AboutUsFrontend.DonationStatusActivity">
 
   <TextView
       android:id="@+id/dns_status"
