--- a/BeingSeenApp/app/src/main/res/layout/activity_youth_main_navbar.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_youth_main_navbar.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.991"
-        app:menu="@menu/hy_nav_menu"/>
+        app:menu="@menu/youth_nav_menu"/>
 
     <fragment
         android:id="@+id/fragmentContainerView"
@@ -30,6 +30,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.285"
-        app:navGraph="@navigation/hy_navigation" />
+        app:navGraph="@navigation/youth_navigation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
