--- a/BeingSeenApp/app/src/main/res/layout/fragment_about_us.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_about_us.xml
@@ -3,7 +3,7 @@
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:id="@+id/container"
-android:layout_width="wrap_content"
+android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:visibility="visible"
 tools:context=".AboutUsFrontend.AboutUsFragment">
@@ -12,16 +12,16 @@ tools:context=".AboutUsFrontend.AboutUsFragment">
     android:id="@+id/aboutus_title"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="80dp"
-    android:layout_marginTop="40dp"
-    android:layout_marginEnd="80dp"
     android:text="@string/about_us"
+    android:textSize="20dp"
     android:textAppearance="@style/TextAppearance.AppCompat.Display3"
     android:textColor="@color/black"
     android:textStyle="normal|bold"
     android:visibility="visible"
+    android:layout_marginTop="20dp"
+    android:layout_gravity="center_horizontal"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="1.0"
+    app:layout_constraintHorizontal_bias="0.5"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     tools:visibility="visible" />
@@ -33,6 +33,7 @@ tools:context=".AboutUsFrontend.AboutUsFragment">
     android:layout_marginStart="32dp"
     android:layout_marginTop="36dp"
     android:layout_marginEnd="32dp"
+    android:textColor="@color/black"
     android:text="The project aims to create an app that helps homeless youth by removing certains stigmas of donating to the homeless, such as the stigma that homeless youths might use the money to purchase alcohol rather than paying off their loans/mortgages. All found will be used in helping homeless youths."
     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
     app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +46,7 @@ tools:context=".AboutUsFrontend.AboutUsFragment">
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginBottom="64dp"
-    android:text="Donate Us !"
+    android:text="Donate"
     android:textAppearance="@style/TextAppearance.AppCompat.Display1"
     android:textColor="@color/white"
     android:textColorHighlight="#00BFA5"
