--- a/BeingSeenApp/app/src/main/res/layout/fragment_donation_goal.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_donation_goal.xml
@@ -19,8 +19,8 @@ tools:context=".YouthDonationGoal.DonationGoalFragment">
 
     <TextView
         android:id="@+id/HyUsername"
-        android:layout_width="295dp"
-        android:layout_height="51dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="25dp"
@@ -32,8 +32,8 @@ tools:context=".YouthDonationGoal.DonationGoalFragment">
 
     <TextView
         android:id="@+id/HyGoalTitle"
-        android:layout_width="301dp"
-        android:layout_height="49dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="30dp"
@@ -74,14 +74,14 @@ tools:context=".YouthDonationGoal.DonationGoalFragment">
 
     <TextView
         android:id="@+id/HyGoalDescription"
-        android:layout_width="348dp"
-        android:layout_height="160dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textAlignment="textStart"
         android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.567" />
