--- a/BeingSeenApp/app/src/main/res/layout/fragment_conversion_requests_history.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_conversion_requests_history.xml
@@ -7,5 +7,34 @@
     tools:context=".ConversionRequests.ConversionRequestHistoryFragment">
 
 
+    <TextView
+        android:id="@+id/rq_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="400dp"
+        android:text="Requests:"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+        android:textColor="@color/green"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rq_recycler_view"
+        android:layout_width="400dp"
+        android:layout_height="600dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rq_title" />
 </androidx.constraintlayout.widget.ConstraintLayout>
