--- a/BeingSeenApp/app/src/main/res/layout/fragment_org_user_profile.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_org_user_profile.xml
@@ -54,6 +54,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.01" />
 
+    <Button
+        android:id="@+id/orgPurchaseCurrency"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Purchase Credits"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.233"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.85" />
+
     <TextView
         android:id="@+id/OrgPfUnameDisplayFrag"
         android:layout_width="wrap_content"
