--- a/BeingSeenApp/app/src/main/res/layout/activity_show_youth_list.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_show_youth_list.xml
@@ -49,5 +49,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ml_input"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:layoutAnimation="@anim/recycler_view_layout_animation"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
