--- a/BeingSeenApp/app/src/main/res/layout/fragment_content_page.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_content_page.xml
@@ -28,7 +28,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/content_page_txt" />
+        app:layout_constraintTop_toBottomOf="@+id/content_page_txt"
+        android:layoutAnimation="@anim/recycler_view_layout_animation"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
