--- a/BeingSeenApp/app/src/main/res/layout/fragment_transaction_history.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_transaction_history.xml
@@ -29,7 +29,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/transaction_history_txt" />
+        app:layout_constraintTop_toBottomOf="@+id/transaction_history_txt"
+        android:layoutAnimation="@anim/recycler_view_layout_animation"/>
 
     <Switch
         android:id="@+id/to_or_from_switch"
