--- a/BeingSeenApp/app/src/main/res/anim/recycler_view_layout_animation.xml
+++ b/BeingSeenApp/app/src/main/res/anim/recycler_view_layout_animation.xml
@@ -2,6 +2,6 @@
 <layoutAnimation xmlns:android="http://schemas.android.com/apk/res/android"
     android:delay="15%"
     android:animationOrder="normal"
-    android:animation="@anim/slide_in">
+    android:animation="@anim/recycler_item_slide_in">
 
 </layoutAnimation>
