--- a/BeingSeenApp/app/src/main/res/layout/activity_payment_ok_animation.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_payment_ok_animation.xml
@@ -16,7 +16,8 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:lottie_autoPlay="true"
-      app:lottie_rawRes="@raw/ok_animation" />
+      app:lottie_rawRes="@raw/ok_animation"
+      />
 
 
 
