--- a/BeingSeenApp/app/src/main/res/layout/fragment_search_for_merchant.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_search_for_merchant.xml
@@ -7,13 +7,27 @@
     android:layout_height="match_parent"
     tools:context=".SearchForMerchant.SearchForMerchantFragment">
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/search_for_merchant_lottie_animation_view"
+        android:layout_width="386dp"
+        android:layout_height="286dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.886"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.381"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/search_animation" />
+
     <ImageButton
         android:id="@+id/SearchUserName"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginTop="250dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginBottom="250dp"
+        android:layout_marginTop="450dp"
+        android:layout_marginEnd="170dp"
+        android:layout_marginBottom="50dp"
         android:backgroundTint="@color/green"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,9 +44,9 @@
         android:id="@+id/searchInputLayout"
         android:layout_width="200dp"
         android:layout_height="48dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="250dp"
-        android:layout_marginBottom="250dp"
+        android:layout_marginStart="190dp"
+        android:layout_marginTop="450dp"
+        android:layout_marginBottom="50dp"
         app:boxStrokeColor="#00C853"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/SearchUserName"
