--- a/BeingSeenApp/app/src/main/res/layout/fragment_search_for_youth.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_search_for_youth.xml
@@ -1,19 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SearchForYouth.SearchForYouthFragment">
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/search_for_youth_lottie_animation_view"
+        android:layout_width="384dp"
+        android:layout_height="316dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/searchInputLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.962"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.984"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/search_animation" />
+
     <ImageButton
         android:id="@+id/SearchUserName"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginTop="250dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginBottom="250dp"
+        android:layout_marginTop="450dp"
+        android:layout_marginEnd="170dp"
+        android:layout_marginBottom="50dp"
         android:backgroundTint="@color/green"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,9 +44,9 @@
         android:id="@+id/searchInputLayout"
         android:layout_width="200dp"
         android:layout_height="48dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="250dp"
-        android:layout_marginBottom="250dp"
+        android:layout_marginStart="190dp"
+        android:layout_marginTop="450dp"
+        android:layout_marginBottom="50dp"
         app:boxStrokeColor="#00C853"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/SearchUserName"
@@ -49,8 +63,7 @@
             android:backgroundTint="@color/black"
             android:hint="Enter Username of Youth"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/SearchUserName"
-            />
+            app:layout_constraintEnd_toStartOf="@+id/SearchUserName" />
     </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
