GMTGAN-179 Mock Object Test for viewing requests add improve layout formatting
Testing content is there and can be replicated. Add ConversionRequest page to navigation but not in navbar. Plz change the function called for getting requests from database to the actual one after backend implemented.

--- a/BeingSeenApp/app/src/main/res/layout/activity_sign_up.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_sign_up.xml
@@ -66,6 +66,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout"
         android:layout_width="217dp"
         android:layout_height="61dp"
         app:layout_constraintBottom_toTopOf="@+id/HyPasswordFrame"
