--- a/BeingSeenApp/app/src/main/res/layout/activity_request_details.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_request_details.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="200dp"
-        android:layout_marginBottom="400dp"
+        android:layout_marginBottom="320dp"
         android:text="Status:"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="@color/black"
@@ -21,8 +21,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rq_detail_amount"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/rq_detail_amount" />
 
     <TextView
         android:id="@+id/rq_detail_amount"
@@ -31,7 +30,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="200dp"
-        android:layout_marginBottom="440dp"
+        android:layout_marginBottom="400dp"
         android:text="Amount:"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="@color/black"
@@ -39,8 +38,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rq_detail_time"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/rq_detail_time" />
 
     <Button
         android:id="@+id/rq_detail_back"
@@ -73,8 +71,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rq_detail_back"
-        app:layout_constraintVertical_bias="0.26" />
+        app:layout_constraintTop_toBottomOf="@+id/rq_detail_back" />
 
     <TextView
         android:id="@+id/rq_detail_time"
@@ -83,7 +80,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="200dp"
-        android:layout_marginBottom="480dp"
+        android:layout_marginBottom="440dp"
         android:text="Time:"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="@color/black"
@@ -91,8 +88,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rq_detail_receiver"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/rq_detail_receiver" />
 
     <Button
         android:id="@+id/rq_detail_change_status"
@@ -108,7 +104,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rq_detail_status"
-        app:layout_constraintVertical_bias="0.58000004" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/rq_detail_receiver_field"
@@ -129,16 +125,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="24dp"
         android:text="Time"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        app:layout_constraintBottom_toTopOf="@+id/rq_detail_amount"
+        app:layout_constraintBottom_toBottomOf="@+id/rq_detail_time"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/rq_detail_time"
-        app:layout_constraintTop_toBottomOf="@+id/rq_detail_receiver_field" />
+        app:layout_constraintTop_toTopOf="@+id/rq_detail_time" />
 
     <TextView
         android:id="@+id/rq_detail_amount_field"
