--- a/BeingSeenApp/app/src/main/res/navigation/org_navigation.xml
+++ b/BeingSeenApp/app/src/main/res/navigation/org_navigation.xml
@@ -29,4 +29,9 @@
         android:name="com.example.myapplication.AboutUsFrontend.AboutUsFragment"
         android:label="fragment_about_us"
         tools:layout="@layout/fragment_about_us" />
+    <fragment
+        android:id="@+id/conversionRequestHistoryFragment"
+        android:name="com.example.myapplication.ConversionRequests.ConversionRequestHistoryFragment"
+        android:label="fragment_conversion_requests_history"
+        tools:layout="@layout/fragment_conversion_requests_history" />
 </navigation>
