--- a/BeingSeenApp/app/src/main/res/layout/activity_login.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".SignUpAndLogin.LoginActivity">
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/loading_lottie_animation_view"
+        android:layout_width="0dp"
+        android:layout_height="400dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/loading_animation" />
+
     <Button
         android:id="@+id/HyLoginButton"
         android:layout_width="wrap_content"
@@ -43,6 +55,7 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/HyUsernameFrame"
         android:layout_width="211dp"
         android:layout_height="51dp"
         app:layout_constraintBottom_toTopOf="@+id/HyPasswordFrame"
