--- a/BeingSeenApp/app/src/main/res/layout/fragment_mer_request_history.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_mer_request_history.xml
@@ -30,5 +30,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/req_hist_txt" />
 
+    <Switch
+        android:id="@+id/unprocessedSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="All requests"
+        app:layout_constraintBottom_toTopOf="@id/req_hist_recycler_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@id/transaction_history_txt"
+        app:layout_constraintTop_toTopOf="@+id/req_hist_txt"
+        app:layout_constraintVertical_bias="0.794"
+        tools:ignore="NotSibling" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
