--- a/BeingSeenApp/app/src/main/res/layout/conversion_request_recycler_item.xml
+++ b/BeingSeenApp/app/src/main/res/layout/conversion_request_recycler_item.xml
@@ -32,30 +32,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/rq__item_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="245dp"
-        android:layout_marginBottom="16dp"
-        android:text="Time"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/rq_item_receiver"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
     <Button
         android:id="@+id/rq_item_go"
-        android:layout_width="54dp"
+        android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
-        android:text="Go"
+        android:text="Detail"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/rq_item_status"
@@ -75,7 +58,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/rq__item_time"
+        app:layout_constraintStart_toEndOf="@+id/rq_item_receiver"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
