GMTGAN-186 fixed bugs on back button and added loading screen to sign up

--- a/BeingSeenApp/app/src/main/res/layout/activity_sign_up.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_sign_up.xml
@@ -5,6 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SignUpAndLogin.SignUpActivity">
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/loading_lottie_animation_view"
+        android:layout_width="0dp"
+        android:layout_height="400dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/loading_animation" />
 
     <Spinner
         android:id="@+id/spinner"
@@ -66,6 +77,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/HyUsernameFrame"
         android:layout_width="217dp"
         android:layout_height="61dp"
         app:layout_constraintBottom_toTopOf="@+id/HyPasswordFrame"
