--- a/BeingSeenApp/app/src/main/res/menu/mer_nav_menu.xml
+++ b/BeingSeenApp/app/src/main/res/menu/mer_nav_menu.xml
@@ -11,5 +11,10 @@
         android:icon="@drawable/ic_notifications_black_24dp"
         android:label="Transaction History"
         android:title="Transaction History" />
+    <item
+        android:id="@+id/merRequestHistoryFragment"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:label="Request History"
+        android:title="Request History" />
 
 </menu>
