--- a/BeingSeenApp/app/src/main/res/layout/fragment_about_us.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_about_us.xml
@@ -70,6 +70,6 @@ tools:context=".AboutUsFrontend.AboutUsFragment">
         app:layout_constraintVertical_bias="0.112"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
-        app:lottie_rawRes="@raw/beingseen_animation" />
+        app:lottie_rawRes="@raw/aboutus_animation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
