--- a/BeingSeenApp/app/src/main/res/values/colors.xml
+++ b/BeingSeenApp/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="green">#5DB075</color>
+    <color name="green">#418052</color>
 </resources>
