--- a/BeingSeenApp/app/src/main/res/layout/fragment_org_user_profile.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_org_user_profile.xml
@@ -72,15 +72,15 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="108dp"
-                android:layout_marginEnd="30dp"
-                android:layout_marginBottom="269dp"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="127dp"
+                android:layout_marginEnd="35dp"
+                android:layout_marginBottom="250dp"
                 android:text="name"
-                android:typeface="monospace"
                 android:textColor="@color/black"
                 android:textSize="20dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <TextView
                 android:id="@+id/OrgPfUdescDisplayFrag"
@@ -95,10 +95,10 @@
                 android:layout_marginEnd="39dp"
                 android:layout_marginBottom="162dp"
                 android:text="bio"
-                android:typeface="monospace"
                 android:textColor="@color/black"
                 android:textSize="15dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:typeface="normal" />
 
             <TextView
                 android:id="@+id/OrgPfBalanceFrag"
