GMTGAN-193 fixed background UI bug for set donation goal page

--- a/BeingSeenApp/app/src/main/res/layout/activity_set_donation_goal.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_set_donation_goal.xml
@@ -7,7 +7,7 @@
     tools:context=".YouthDonationGoal.SetDonationGoalActivity">
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="411dp"
         android:layout_height="match_parent"
         android:background="@drawable/testbg4"
         app:layout_constraintBottom_toBottomOf="parent"
