--- a/BeingSeenApp/app/src/main/res/layout/activity_cash_conversion.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_cash_conversion.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchForMerchant.TransferToMerchantActivity">
+    tools:context=".CashConversion.CashConversionRequestActivity">
 
 
   <TextView
@@ -39,8 +39,28 @@
         android:id="@+id/amount_convert"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:background="#00000000"
         android:hint="amount"
+        android:inputType="textPersonName" />
+  </com.google.android.material.textfield.TextInputLayout>
+
+  <com.google.android.material.textfield.TextInputLayout
+      android:layout_width="300dp"
+      android:layout_height="61dp"
+      app:layout_constraintBottom_toTopOf="@+id/convertConfirm"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.8">
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/email_convert"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="#00000000"
+        android:hint="email for your bank account"
         android:inputType="textPersonName" />
   </com.google.android.material.textfield.TextInputLayout>
 
@@ -54,5 +74,6 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.787" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
