GMTGAN-191 improve signup/login UI (#105)

--- a/BeingSeenApp/app/src/main/res/layout/activity_login.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".SignUpAndLogin.LoginActivity">
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="132dp"
+        android:layout_height="139dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintBottom_toTopOf="@+id/HyUsernameFrame"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/being_seen_logo_round" />
+
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/loading_lottie_animation_view"
         android:layout_width="0dp"
@@ -23,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="172dp"
-        android:text="Login"
+        android:text="Log in"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -47,7 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#00000000"
-            android:hint="password"
+            android:hint="Password"
             android:inputType="textPassword"
             app:passwordToggleEnabled="true" />
 
@@ -70,7 +82,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#00000000"
-            android:hint="username"
+            android:hint="Username"
             android:inputType="textPersonName" />
     </com.google.android.material.textfield.TextInputLayout>
 
