--- a/BeingSeenApp/app/src/main/res/layout/fragment_dn_user_profile.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_dn_user_profile.xml
@@ -33,18 +33,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.01" />
 
-
     <Button
         android:id="@+id/dnPurchaseCurrency"
-        android:layout_width="wrap_content"
+        android:layout_width="88dp"
         android:layout_height="wrap_content"
-        android:text="Purchase Credits"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="62dp"
+        android:text="Buy Credits"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.233"
+        app:layout_constraintHorizontal_bias="0.02"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.85" />
+        app:layout_constraintVertical_bias="0.00001" />
     
 <!--     <TextView
         android:id="@+id/DnPfUnameDisplay"
